--- a/index.html
+++ b/index.html
@@ -13,45 +13,59 @@
   <div id="content">
     <div id="header">
       <div id="logo">
-    <! img src="images/logo.jpg" alt="公司標誌" width="1024" height="600">
-    <img src="images/logo.jpg" alt="公司標誌">
+    <img src="images/logo.jpg" alt="公司標誌" width="780">
 
-    <h4>在這裡寫你的標語</h4>
+
+    <h4>用新鮮、有機的食材為您呈現美味的蔬食料理</h4>
 </div>
 
       <div id="links">
         <ul>
-          <li><a href="#">首頁</a></li>
-          <li><a href="aboutus.html" target="_blank">關於我們</a></li>
-          <li><a href="#">技術</a></li>
-          <li><a href="#">聯絡我們</a></li>
+          <center><li><a href="#">首頁</a></li>
+          <center><li><a href="aboutus.html" target="_blank">關於我們</a></li>
+          <center><li><a href="#">技術</a></li>
+          <center><li><a href="#">聯絡我們</a></li>
         </ul>
       </div>
     </div>
     <div id="mainimg">
-      <h3>發明</h3>
-      <h4>為一個無線世界</h4>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+     
+<h3>還吃土！</h3>
+ <h4>健康蔬食照顧您的寶貝身體</h4>
     </div>
     <div id="contentarea">
       <div id="leftbar">
         <h2>你好！</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Ut id nisl nec leo congue fringilla. Suspendisse potenti. Phasellus sed velit eget sapien interdum ultrices. Nullam nec magna. Maecenas cursus. Etiam sapien neque, auctor eu, volutpat at, condimentum et, odio. Morbi id lorem. Nam urna ante, venenatis sed, molestie eu, dictum sit amet, tellus. Phasellus pellentesque magna vitae elit. In dignissim eleifend odio. Curabitur at libero. Donec est justo, pellentesque eu, vulputate feugiat, ultrices quis, nunc. Sed neque. Nulla egestas, risus id consectetuer ultrices, ante turpis posuere ligula, ac pulvinar tortor dui ac odio. Curabitur auctor urna sed purus. In varius。</p>
+        <p>我們是一家致力於為客戶提供最優質、美味的蔬食餐廳。我們堅信，健康是幸福的基石，而飲食是健康的關鍵。</p>
+        <p>在我們的餐廳，我們採用最新鮮的有機食材，由我們的烹飪大師巧手烹製，為您呈現一系列精彩的蔬食料理。我們的菜單包括各種主菜、健康沙拉、新鮮果汁、和美味的甜點。</p>
+        <p>我們的使命是為您提供健康、美味、以及對環境友善的飲食選擇。我們期待為您提供一個令人愉悅的用餐體驗。</p>
         <br />
-        <p>Nulla sit amet magna non enim posuere porttitor. Vestibulum ante. Nam et nulla vestibulum libero facilisis aliquet. Vivamus ante velit, facilisis eu, pulvinar nec, ultricies vel, sem. Morbi ac velit. Sed est. Proin vehicula. Maecenas ac pede. Fusce rhoncus. Maecenas at quam. Aenean nunc felis, elementum vel, faucibus vitae, nonummy et, tellus. Nulla auctor venenatis urna. Donec accumsan urna sed libero. Fusce at mi eu leo sollicitudin adipiscing. Ut metus purus, gravida nec, scelerisque quis, venenatis non, ante. Aliquam a leo vel libero tempus scelerisque. Morbi iaculis. Ut libero。</p>
+        <p>我們的菜單設計了各種選擇，以滿足您的口味和飲食需求。不論您是素食者、蔬食愛好者還是喜愛健康飲食的人，我們都有適合您的選擇。</p>
+        <p>我們的廚師使用當季的新鮮食材來烹製每一道菜，確保您品味到最美味的蔬食料理。請瀏覽我們的菜單，選擇您喜歡的菜品。</p>
+        <a href="menu.html">我沒做菜單我致上一百二十分的歉意</a>
         <br />
         <a href="#">更多 ></a><br />
         <br />
       </div>
       <div id="rightbar">
         <h2>最新消息</h2>
-        <p><span class="orangetext">12/08/2006</span><br />
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Utid anisl nec leo congue fringilla. <br />
+        <p><span class="orangetext">2023/10/20 2:17</span><br />
+         我昨天吃雞排<br />
           <br />
-          <span class="orangetext">10/08/2006</span><br />
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Utid anisl nec leo congue fringilla. <br />
+          <span class="orangetext">2023/10/20 2:17</span><br />
+         沒錢了，今天只能吃泡麵<br />
           <br />
-          <span class="orangetext">28/07/2006</span><br />
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Utid anisl nec leo congue fringilla。</p>
+          <span class="orangetext">2023/10/20 2:18</span><br />
+          我想不出來還可以打什麼<br /> 心一跳 愛就開始煎熬 每一分 60秒</p>
+
       </div>
     </div>
     <div id="bottom">
