--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="menu.html">我沒做菜單我致上一百二十分的歉意</a>
         <br />
         <br />
-        <a href="#">更多 ></a><br />
+        <a href="#">更多（但其實沒有更多） ></a><br />
         <br />
       </div>
       <div id="rightbar">
