--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <div id="links">
         <ul>
           <center><li><a href="#">首頁</a></li>
-          <center><li><a href="aboutus.html" target="_blank">關於我們</a></li>
-          <center><li><a href="#">技術</a></li>
+          <center><li><a href="aboutus.html" target="_blank">關於我們（只有這個點進去有東西）</a></li>
+          <center><li><a href="#">菜單</a></li>
           <center><li><a href="#">聯絡我們</a></li>
         </ul>
       </div>
