--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>發明模板</title>
+<title>好ㄔ我都吃</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
